# 2026sp-420-Antifreeze

./: .coverage  .gitignore  LICENSE  README.md  coverage.xml  ls  main.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: continuous-integration.yml  github-actions-demo.yml  status.yml
src/: Main.py  add-remove-delete-lab.py  cli.py  example.csv  example.json  faculty_test.py  main.py  schedule.csv  schedule.py
src/2026sp_420_antifreeze.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/controller/: __init__.py  cli.py  dom.js  jumpscare.js  navigation-controller.js  navigation-model.js  navigation-view.js  navigation.js  navigation_controller.js  navigation_model.js  navigation_view.js
src/controller/flask/: __init__.py  chat_routes.py  course_routes.py  faculty_routes.py  lab_routes.py  room_routes.py  routes.py  schedule_routes.py  time_slot_routes.py
src/controller/modifyConfig/: __init__.py  configCli.py  modConflict.py  modCourse.py  modFaculty.py  modLab.py  modRoom.py  modTimeSlot.py  utilsCLI.py
src/model/: __init__.py
src/model/AI/: __init__.py  agent.py  executor.py
src/model/schedule/: __init__.py  conflict.py  course.py  faculty.py  lab.py  room.py  schedule.py  time_slot_config.py
src/modifyConfig/: configCli.py  modConflict.py  modCourse.py  modFaculty.py  modLab.py  modRoom.py  modTimeSlot.py  utilsCLI.py
src/schedule/: conflict.py  course.py  courseTests.py  empty.json  faculty.py  lab.py  room.py  schedule.py
test/: test_conflict.py  test_course.py  test_faculty.py  test_lab.py  test_room.py  test_time_slot_config.py
(+5 files in other folders)
