[project]
name = "2026sp-420-antifreeze"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "course-constraint-scheduler>=2.6.1",
    "flask>=3.0",
    "pytest>=9.0.2",
    "pytest-codecov>=0.7.0",
    "pytest-cov>=7.1.0",
    "reportlab>=4.0",
    "ruff>=0.15.8",
    "ty>=0.0.27",
]
