[project]
name = "2026sp-420-antifreeze"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "course-constraint-scheduler>=2.6.1",
    "flask>=3.0",
    "langchain>=1.2.15",
    "pytest>=9.0.2",
    "reportlab>=4.0",
]

[dependency-groups]
dev = [
    "langchain>=1.2.15",
    "langchain-openai>=1.1.12",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
