[project]
name = "antifreeze"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "course-constraint-scheduler>=2.6.2",
    "flask>=3.1.3",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.14",
    "pytest>=9.0.2",
    "reportlab>=4.4.10",
    "ruff>=0.15.9",
    "ty>=0.0.29",
    "flask",
    "faster-whisper",
    "ffmpeg-python",
    "soundfile"
]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
